@@ -47,6 +47,7 @@ Version 2.6.0
     - Try /opt/rocm if it exists.
     - See "How do I enable ROCm SMI and select which version to use?"
       in the FAQ for details.
+  + Add a CMakeLists for Windows under contrib/windows-cmake/ .
 * Documentation
   + Add FAQ entry "How do I create a custom heterogeneous and
      asymmetric topology?"
